Refactored:   - Removed Board constructor that took a size.     This was never used.   - Added verbose option back into rebar config     to see individual tests being run.   - Extracted ttt_ai macros into ttt_ai.hrl

--- a/rebar.config
+++ b/rebar.config
@@ -44,4 +44,4 @@
    ]}
  ]}.
 
-{eunit_opts, [{report,{eunit_surefire,[{dir,"."}]}}]}.
+{eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
